--- a/about.html
+++ b/about.html
@@ -38,19 +38,19 @@ integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/index.html"><strong>Home</strong></a>
+                        <a class="nav-link" aria-current="page" href="/iHUBv1.1/index.html"><strong>Home</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/events.html"><strong>Events</strong></a>
+                        <a class="nav-link" href="/iHUBv1.1/events.html"><strong>Events</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html"><strong>About</strong></a>
+                        <a class="nav-link" href="/iHUBv1.1/about.html"><strong>About</strong></a>
                     </li>
                     <!--<li class="nav-item">
                         <a class="nav-link" href="/gallery.html"><strong>Gallery</strong></a>
                     </li>-->
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html"><strong>Contact US</strong></a>
+                        <a class="nav-link" href="/iHUBv1.1/contact.html"><strong>Contact US</strong></a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
