--- a/descon2021.html
+++ b/descon2021.html
@@ -33,19 +33,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/index.html"><strong>Home</strong></a>
+                        <a class="nav-link" aria-current="page" href="/iHUBv1.1/index.html"><strong>Home</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/events.html"><strong>Events</strong></a>
+                        <a class="nav-link" href="/iHUBv1.1/events.html"><strong>Events</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html"><strong>About</strong></a>
+                        <a class="nav-link" href="/iHUBv1.1/about.html"><strong>About</strong></a>
                     </li>
                     <!--<li class="nav-item">
                         <a class="nav-link" href="/gallery.html"><strong>Gallery</strong></a>
                     </li>-->
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html"><strong>Contact US</strong></a>
+                        <a class="nav-link" href="/iHUBv1.1/contact.html"><strong>Contact US</strong></a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -218,7 +218,7 @@
             
 
             <div>
-                <img src="img/descon2021.jpeg" class="img-fluid" alt="...">
+                <img src="descon2021.jpeg" class="img-fluid" alt="...">
             </div>
 
             <div class="fs-5">
